[tool.poetry]
name = "fun-stuff"
version = "0.1.0"
description = "Do fun stuff"
authors = ["Edmond Tam <edmondtam2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
solve = "python word_search_solver.py"
